--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
   <!-- Testimonials -->
 
-  <section class="features testimonials">
+  <section class="testimonials">
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
