--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <h2 class="d-block w-100">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
           <img src="images/dog-img.jpg" alt="dog-profile" class="testimonial-img">
-          <em>Pebbles, New York</em>
+          <em class="d-block w-100">Pebbles, New York</em>
         </div>
         <div class="carousel-item">
-          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+          <h2 class="d-block w-100">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
           <img class="testimonial-img" src="images/lady-img.jpg" alt="lady-profile">
-          <em>Beverly, Illinois</em>
+          <em class="d-block w-100">Beverly, Illinois</em>
         </div>
       </div>
       <button class="carousel-control-prev bg-transparent" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
