--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 
   <!-- BOOTSTRAP CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <!-- <link rel="stylesheet" href="bootstrap-5.0.0-beta1-dist/css/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="bootstrap-5.0.0-beta1-dist/css/bootstrap.min.css"> -->
+
+  <!-- LOCALLY INSTALL BOOTSTRAP CSS endeavour to comment when pushing to server -->
+  <link rel="stylesheet" href="bootstrap-5.0.0-beta1-dist/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="bootstrap-5.0.0-beta1-dist/css/bootstrap.min.css">
 
   <!-- FONTAWESOME -->
   <link rel="stylesheet" href="css/styles.css">
@@ -26,7 +28,6 @@
   <section class="title">
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container-fluid">
           <a class="navbar-brand" href="#">Traderex</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -54,14 +55,10 @@
               </li>
             </ul>
           </div>
-        </div>
       </nav>
 
 
-
       <!-- Title -->
-
-
       <div class="row">
         <div class="col-lg-6">
           <h1>Meet new and interesting dogs nearby.</h1>
