--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" aria-current="page" href="#footer">Contact</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Download</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -197,18 +197,21 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section class="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="btn btn-light btn-lg download-btn"><i class="fab fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-dark btn-lg download-btn"><i class="fab fa-google-play"></i> Download</button>
 
   </section>
 
   <!-- Footer -->
 
   <footer id="footer">
-
+<i class="social-icon fab fa-facebook-f"></i>
+<i class="social-icon fab fa-twitter"></i>
+<i class="social-icon fab fa-instagram"></i>
+<i class="social-icon fas fa-envelope"></i>
     <p>© Copyright 2018 TinDog</p>
 
   </footer>
