--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                 <a class="nav-link" aria-current="page" href="#footer">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="#pricing">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Download</a>
+                <a class="nav-link" href="#cta">Download</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -140,7 +140,7 @@
 
   <!-- Pricing -->
 
-  <section class="pricing">
+  <section id="pricing">
 
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
@@ -197,7 +197,7 @@
 
   <!-- Call to Action -->
 
-  <section class="cta">
+  <section id="cta">
 
     <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
     <button type="button" class="btn btn-light btn-lg download-btn"><i class="fab fa-apple"></i> Download</button>
