--- a/index.html
+++ b/index.html
@@ -28,40 +28,40 @@
   <section class="title">
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-dark">
-          <a class="navbar-brand" href="#">Traderex</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#footer">Contact</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#pricing">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#cta">Download</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  FX Learning Tips
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="#">Price Action</a></li>
-                  <li><a class="dropdown-item" href="#">Pips</a></li>
-                  <li><a class="dropdown-item" href="#">pattern</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
+        <a class="navbar-brand" href="#">Traderex</span></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#footer">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#pricing">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#cta">Download</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                FX Learning Tips
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="#">Price Action</a></li>
+                <li><a class="dropdown-item" href="#">Pips</a></li>
+                <li><a class="dropdown-item" href="#">pattern</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </nav>
 
 
       <!-- Title -->
       <div class="row">
         <div class="col-lg-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-btn"><i class="fab fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-btn"><i class="fab fa-google-play"></i> Download</button>
         </div>
@@ -75,24 +75,24 @@
 
   <!-- Features -->
 
-  <section class="features">
+  <section id="feature">
     <div class="container-fluid">
       <div class="row">
         <div class="feature-box col-lg-4">
           <i class="fas fa-check-square fa-3x icon"></i>
-          <h3>Easy to use.</h3>
+          <h3 class="feature-title">Easy to use.</h3>
           <p>So easy to use, even your dog could do it.</p>
         </div>
 
         <div class="feature-box col-lg-4">
           <i class="fas fa-heart fa-3x icon"></i>
-          <h3>Elite Clientele</h3>
+          <h3 class="feature-title">Elite Clientele</h3>
           <p>We have all the dogs, the greatest dogs.</p>
         </div>
 
         <div class="feature-box col-lg-4">
           <i class="fas fa-bullseye fa-3x icon"></i>
-          <h3>Guaranteed to work.</h3>
+          <h3 class="feature-title">Guaranteed to work.</h3>
           <p>Find the love of your dog's life or your money back.</p>
         </div>
       </div>
@@ -102,16 +102,16 @@
 
   <!-- Testimonials -->
 
-  <section class="testimonials">
+  <section id="testimonials">
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <h2 class="d-block w-100">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <h2 class="testimonial-text d-block w-100">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
           <img src="images/dog-img.jpg" alt="dog-profile" class="testimonial-img">
           <em class="d-block w-100">Pebbles, New York</em>
         </div>
         <div class="carousel-item">
-          <h2 class="d-block w-100">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+          <h2 class="testimonial-text d-block w-100">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
           <img class="testimonial-img" src="images/lady-img.jpg" alt="lady-profile">
           <em class="d-block w-100">Beverly, Illinois</em>
         </div>
@@ -142,10 +142,10 @@
 
   <section id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
-    <!-- CARD -->
+    <!-- PRICING-->
     <div class="row">
       <div class="pricing-column col-lg-4 col-md-6 col-sm-12">
         <div class="card">
@@ -153,7 +153,7 @@
             <h3>Chihuahua</h3>
           </div>
           <div class="card-body">
-            <h2>Free</h2>
+            <h2 class="price-text">Free</h2>
             <p>5 Matches Per Day</p>
             <p>10 Messages Per Day</p>
             <p>Unlimited App Usage</p>
@@ -168,7 +168,7 @@
             <h3>Labrador</h3>
           </div>
           <div class="card-body">
-            <h2>$49 / mo</h2>
+            <h2 class="price-text">$49 / mo</h2>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
@@ -183,7 +183,7 @@
             <h3>Mastiff</h3>
           </div>
           <div class="card-body">
-            <h2>$99 / mo</h2>
+            <h2 class="price-text">$99 / mo</h2>
             <p>Pirority Listing</p>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
@@ -199,7 +199,7 @@
 
   <section id="cta">
 
-    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
     <button type="button" class="btn btn-light btn-lg download-btn"><i class="fab fa-apple"></i> Download</button>
     <button type="button" class="btn btn-dark btn-lg download-btn"><i class="fab fa-google-play"></i> Download</button>
 
@@ -208,10 +208,10 @@
   <!-- Footer -->
 
   <footer id="footer">
-<i class="social-icon fab fa-facebook-f"></i>
-<i class="social-icon fab fa-twitter"></i>
-<i class="social-icon fab fa-instagram"></i>
-<i class="social-icon fas fa-envelope"></i>
+    <a href="https://www.facebook.com/profile.php?id=100009190552568" target="_blank"><i class="social-icon fab fa-facebook-f"></i></a>
+    <a href="https://twitter.com/JosephEdemekong?s=09" target="_blank"><i class="social-icon fab fa-twitter"></i></a>
+    <a href="https://www.instagram.com/invites/contact/?i=dpc6ms9ul4jv&utm_content=2gcv7yx" target="_blank"><i class="social-icon fab fa-instagram"></i></a>
+    <a href="mailto:josephedemekong1@gmail.com"><i class="social-icon fas fa-envelope"></i></a>
     <p>© Copyright 2018 TinDog</p>
 
   </footer>
