--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Traderex</title>
-  <link rel="icon" href="images/candle-stick.ico">
+  <title>Coffee Grocery</title>
+  <link rel="icon" href="images/tea.ico">
   <!-- GOOGLE FONTS -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
@@ -25,10 +25,10 @@
 
 <body>
 
-  <section class="title">
+  <section class="colored-section" id="title">
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="#">Traderex</span></a>
+        <a class="navbar-brand" href="#">JoeBiz</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -45,12 +45,12 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                FX Learning Tips
+                Learn More
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Price Action</a></li>
-                <li><a class="dropdown-item" href="#">Pips</a></li>
-                <li><a class="dropdown-item" href="#">pattern</a></li>
+                <li><a class="dropdown-item" href="#">Wanting to go for a shoppeing spree?</a></li>
+                <li><a class="dropdown-item" href="#">Vacations</a></li>
+                <li><a class="dropdown-item" href="#">Travel</a></li>
               </ul>
             </li>
           </ul>
@@ -61,12 +61,12 @@
       <!-- Title -->
       <div class="row">
         <div class="col-lg-6">
-          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-heading">Get our latest ordeals about coffee brew and thanks us later.</h1>
           <button type="button" class="btn btn-dark btn-lg download-btn"><i class="fab fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-btn"><i class="fab fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6">
-          <img class="title-img" src="images/iphone6.png" alt="iphone-mockup">
+          <img class="title-img" src="images/flyingTeaCup.png" alt="Brewcoffee">
         </div>
       </div>
     </div>
@@ -75,25 +75,25 @@
 
   <!-- Features -->
 
-  <section id="feature">
+  <section class="white-section" id="feature">
     <div class="container-fluid">
       <div class="row">
         <div class="feature-box col-lg-4">
           <i class="fas fa-check-square fa-3x icon"></i>
           <h3 class="feature-title">Easy to use.</h3>
-          <p>So easy to use, even your dog could do it.</p>
+          <p>So easy to use, even a newbie can now brew it's own coffee to its taste.</p>
         </div>
 
         <div class="feature-box col-lg-4">
           <i class="fas fa-heart fa-3x icon"></i>
-          <h3 class="feature-title">Elite Clientele</h3>
-          <p>We have all the dogs, the greatest dogs.</p>
+          <h3 class="feature-title">How to remake your coffee</h3>
+          <p>We have all deep content on rebranding your product</p>
         </div>
 
         <div class="feature-box col-lg-4">
           <i class="fas fa-bullseye fa-3x icon"></i>
           <h3 class="feature-title">Guaranteed to work.</h3>
-          <p>Find the love of your dog's life or your money back.</p>
+          <p>Find good tooltips on brewing and masterising your coffee</p>
         </div>
       </div>
     </div>
@@ -102,47 +102,40 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <h2 class="testimonial-text d-block w-100">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-          <img src="images/dog-img.jpg" alt="dog-profile" class="testimonial-img">
-          <em class="d-block w-100">Pebbles, New York</em>
+  <section class="colored-section" id="testimonials">
+    <div class="container-fluid">
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active container-fluid">
+            <h2 class="testimonial-text d-block w-100">Ever wandering about where to shop best for your coffee. This is one of the site I ever got in contact with.</h2>
+            <img src="images/Jada.jpg" alt="Jada M." class="testimonial-img">
+            <em class="d-block w-100">Jada M., New York</em>
+          </div>
+          <div class="carousel-item container-fluid">
+            <h2 class="testimonial-text d-block w-100">Wow.. it got so amazing that I can now make my own coffee without worries because "Coffe Grocery" got me covered</h2>
+            <img class="testimonial-img" src="images/lil-mon.jpg" alt="Lil Mon">
+            <em class="d-block w-100">Lil Mon, California</em>
+          </div>
+          <div class="carousel-item container-fluid">
+            <h2 class="testimonial-text d-block w-100">I was so happy when my friend once introduce me to coffee grocery site. I learn about everything I needed to brew my coffee.</h2>
+            <img class="testimonial-img" src="images/beverly.jpg" alt="Lil Mon">
+            <em class="d-block w-100">Beverly, Singapore</em>
+          </div>
         </div>
-        <div class="carousel-item">
-          <h2 class="testimonial-text d-block w-100">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-          <img class="testimonial-img" src="images/lady-img.jpg" alt="lady-profile">
-          <em class="d-block w-100">Beverly, Illinois</em>
-        </div>
+        <button class="carousel-control-prev bg-transparent" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        </button>
+        <button class="carousel-control-next bg-transparent" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        </button>
       </div>
-      <button class="carousel-control-prev bg-transparent" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      </button>
-      <button class="carousel-control-next bg-transparent" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      </button>
     </div>
-
   </section>
-
-
-  <!-- Press -->
-
-  <section class="press">
-    <img class="press-img" src="images/TechCrunch.png" alt="tc-logo">
-    <img class="press-img" src="images/tnw.png" alt="tnw-logo">
-    <img class="press-img" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-img" src="images/mashable.png" alt="mashable-logo">
-
-  </section>
-
 
   <!-- Pricing -->
+  <section class="white-section" id="pricing">
 
-  <section id="pricing">
-
-    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
+    <h2 class="section-heading">A Plan for Every Coffee Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
     <!-- PRICING-->
@@ -197,23 +190,26 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section class="colored-section" id="cta">
 
-    <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button" class="btn btn-light btn-lg download-btn"><i class="fab fa-apple"></i> Download</button>
-    <button type="button" class="btn btn-dark btn-lg download-btn"><i class="fab fa-google-play"></i> Download</button>
+    <div class="container-fluid">
+      <h3 class="big-heading">Get the most need in knowing the important of coffee to your health.</h3>
+      <button type="button" class="btn btn-light btn-lg download-btn"><i class="fab fa-apple"></i> Download</button>
+      <button type="button" class="btn btn-dark btn-lg download-btn"><i class="fab fa-google-play"></i> Download</button>
+    </div>
 
   </section>
 
   <!-- Footer -->
 
-  <footer id="footer">
-    <a href="https://www.facebook.com/profile.php?id=100009190552568" target="_blank"><i class="social-icon fab fa-facebook-f"></i></a>
-    <a href="https://twitter.com/JosephEdemekong?s=09" target="_blank"><i class="social-icon fab fa-twitter"></i></a>
-    <a href="https://www.instagram.com/invites/contact/?i=dpc6ms9ul4jv&utm_content=2gcv7yx" target="_blank"><i class="social-icon fab fa-instagram"></i></a>
-    <a href="mailto:josephedemekong1@gmail.com"><i class="social-icon fas fa-envelope"></i></a>
-    <p>© Copyright 2018 TinDog</p>
-
+  <footer class="white-section" id="footer">
+    <div class="container-fluid">
+      <a href="https://www.facebook.com/profile.php?id=100009190552568" target="_blank"><i class="social-icon fab fa-facebook-f"></i></a>
+      <a href="https://twitter.com/JosephEdemekong?s=09" target="_blank"><i class="social-icon fab fa-twitter"></i></a>
+      <a href="https://www.instagram.com/invites/contact/?i=dpc6ms9ul4jv&utm_content=2gcv7yx" target="_blank"><i class="social-icon fab fa-instagram"></i></a>
+      <a href="mailto:josephedemekong1@gmail.com"><i class="social-icon fas fa-envelope"></i></a>
+      <p>© Copyright 2021 Brew<span style="color:#200201;">Coffee</span></p>
+    </div>
   </footer>
 
   <!-- BOOTSTRAP SCRIPT -->
