--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                 Learn More
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Wanting to go for a shoppeing spree?</a></li>
-                <li><a class="dropdown-item" href="#">Vacations</a></li>
-                <li><a class="dropdown-item" href="#">Travel</a></li>
+                <li><a class="dropdown-item" href="#">Wanting to go for a shopping spree?</a></li>
+                <li><a class="dropdown-item" href="#">Vacations?</a></li>
+                <li><a class="dropdown-item" href="#">Travels?</a></li>
               </ul>
             </li>
           </ul>
